// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionList > Comment renders UserBlock content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-euTbep-default-true brd-c-cdJFWN-iPJLV-css"
    >
      <span
        aria-label="user"
        class="brd-icon brd-icon-user"
        role="img"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 10a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm9 12a9 9 0 1 0-18 0"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          Ziyan
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          11:24
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <span
          class="brd-c-eTYwxC"
        >
          <span
            class="brd-c-jmPTIj brd-c-jmPTIj-bwiKqY-size-sm"
          >
            @
            name
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders paragraph content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-euTbep-default-true brd-c-cdJFWN-iPJLV-css"
    >
      <span
        aria-label="user"
        class="brd-icon brd-icon-user"
        role="img"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 10a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm9 12a9 9 0 1 0-18 0"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          Ziyan
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          11:24
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <p>
          <span>
            text
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders text content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-euTbep-default-true brd-c-cdJFWN-iPJLV-css"
    >
      <span
        aria-label="user"
        class="brd-icon brd-icon-user"
        role="img"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 10a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm9 12a9 9 0 1 0-18 0"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          Ziyan
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          11:24
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <span>
          text
        </span>
      </div>
    </div>
  </div>
</div>
`;
